# ScoutGrid

./: .gitignore  Cargo.toml  README.md  vercel.json
.github/workflows/: ci.yml
contract/: Cargo.toml  README.md
contract/src/: lib.rs  test.rs
contract/test_snapshots/test/tests/: test_10_double_loan_rejected.1.json  test_1_happy_path_register_and_first_sale.1.json  test_2_secondary_sale_with_royalty.1.json  test_4_refund_on_new_bid.1.json  test_6_loan_happy_path.1.json  test_7_loan_compound_interest.1.json  test_8_loan_exceeds_ltv_rejected.1.json  test_9_loan_liquidation.1.json
docs/: contract-client.md  index.md  option-d-collateral-loan.md  phase2-plan.md  script.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: Layout.tsx  Navbar.tsx
frontend/src/components/ui/: AIChatbot.tsx  BidModal.tsx  LoanBadge.tsx  LoanModal.tsx  MintModal.tsx  PlayerCard.tsx  RegisterModal.tsx  RepayModal.tsx  Toast.tsx  WalletModal.tsx
frontend/src/lib/: ai-service.ts  constants.ts  contract.ts  demoConfig.ts  demoData.ts  mock-data.ts  store.ts  types.ts  walletKit.ts
frontend/src/pages/: Achievements.tsx  Marketplace.tsx  MyAchievements.tsx  MyRoster.tsx
src/: lib.rs
test_snapshots/test/tests/: test_1_happy_path_register_and_first_sale.1.json  test_2_secondary_sale_with_royalty.1.json  test_3_bid_at_or_above_list_price_rejected.1.json  test_5_edge_case_unauthorized_register.1.json
