[package]
name = "scoutgrid_market"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "25.2.0"

[build]
target = "wasm32v1-none"

[dev-dependencies]
soroban-sdk = { version = "25.2.0", features = ["testutils"] }


[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true